crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@121.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE plt1_e_p2 PARTITION OF plt1_e FOR VALUES IN ('0001', '0005', '0002', '0009');"
---
CreateStmt@0..90
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..22
    Ident@13..22 "plt1_e_p2"
  Whitespace@22..23 " "
  Partition@23..32 "PARTITION"
  Whitespace@32..33 " "
  Of@33..35 "OF"
  Whitespace@35..36 " "
  RangeVar@36..42
    Ident@36..42 "plt1_e"
  Whitespace@42..43 " "
  For@43..46 "FOR"
  Whitespace@46..47 " "
  Values@47..53 "VALUES"
  Whitespace@53..54 " "
  PartitionBoundSpec@54..88
    InP@54..56 "IN"
    Whitespace@56..57 " "
    Ascii40@57..58 "("
    AConst@58..64
      Sconst@58..64 "'0001'"
    Ascii44@64..65 ","
    Whitespace@65..66 " "
    AConst@66..72
      Sconst@66..72 "'0005'"
    Ascii44@72..73 ","
    Whitespace@73..74 " "
    AConst@74..80
      Sconst@74..80 "'0002'"
    Ascii44@80..81 ","
    Whitespace@81..82 " "
    AConst@82..88
      Sconst@82..88 "'0009'"
  Ascii41@88..89 ")"
  Ascii59@89..90 ";"

